--- a/WpfApplication1/App.config
+++ b/WpfApplication1/App.config
@@ -1,6 +1,34 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    <configSections>
+        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="WpfApplication1.ConnectionSetting" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+        </sectionGroup>
+    </configSections>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
     </startup>
+
+    <userSettings>
+        <WpfApplication1.ConnectionSetting>
+            <setting name="Server" serializeAs="String">
+                <value>85.92.146.196</value>
+            </setting>
+            <setting name="Username" serializeAs="String">
+                <value>postgres</value>
+            </setting>
+            <setting name="Database" serializeAs="String">
+                <value>dubaiprint</value>
+            </setting>
+            <setting name="Port" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="Timeout" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="Encription" serializeAs="String">
+                <value>False</value>
+            </setting>
+        </WpfApplication1.ConnectionSetting>
+    </userSettings>
 </configuration>
