--- a/Mapper/Mapper.csproj
+++ b/Mapper/Mapper.csproj
@@ -58,6 +58,7 @@
       <DependentUpon>Transformation.xaml</DependentUpon>
     </Compile>
     <Compile Include="Utils\WPFExtensions.cs" />
+    <Compile Include="XsltNodeTemplateSelector.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -101,6 +102,11 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="transformation.xsl">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
