--- a/Mapper/Mapper.csproj
+++ b/Mapper/Mapper.csproj
@@ -291,7 +291,7 @@
     </Content>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="D:\Work\Navitas\Naiton\svn\NaitonProject2014\NaitonWebServices\DatabaseImporterWebService\DatabaseImporterWebService.csproj">
+    <ProjectReference Include="..\..\svn\NaitonProject2014\NaitonWebServices\DatabaseImporterWebService\DatabaseImporterWebService.csproj">
       <Project>{d159720e-476c-4f9c-a8f7-735b2853f105}</Project>
       <Name>DatabaseImporterWebService</Name>
     </ProjectReference>
