--- a/TestWPF/TestWPF.csproj
+++ b/TestWPF/TestWPF.csproj
@@ -53,6 +53,9 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Window1.xaml.cs">
+      <DependentUpon>Window1.xaml</DependentUpon>
+    </Compile>
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -61,10 +64,10 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="MainWindow.xaml.cs">
-      <DependentUpon>MainWindow.xaml</DependentUpon>
-      <SubType>Code</SubType>
-    </Compile>
+    <Page Include="Window1.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs">
@@ -92,6 +95,19 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="delivery_1.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\svn\NaitonProject2014\Naiton2014\Naiton2014.csproj">
+      <Project>{4acc6dd8-d847-4d8d-aca8-55381dd5353a}</Project>
+      <Name>Naiton2014</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\svn\NaitonProject2014\NaitonControls\NaitonControls.csproj">
+      <Project>{d32a606f-d626-43da-89e4-e7ebc8afa762}</Project>
+      <Name>NaitonControls</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
