--- a/Mapper/App.config
+++ b/Mapper/App.config
@@ -1,18 +1,26 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-    <configSections>
-        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
-            <section name="ScriptModule.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
-        </sectionGroup>
-    </configSections>
-    <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
-    </startup>
-    <userSettings>
-        <ScriptModule.Properties.Settings>
-            <setting name="LastOpenFile" serializeAs="String">
-                <value />
-            </setting>
-        </ScriptModule.Properties.Settings>
-    </userSettings>
+  <configSections>
+    <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+      <section name="ScriptModule.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+    </sectionGroup>
+  </configSections>
+  <connectionStrings>
+    <add name="NaitonEntitiesConnectionString" connectionString="metadata=res://ScriptModuleWebService/DataModel.csdl|res://ScriptModuleWebService/DataModel.ssdl|res://ScriptModuleWebService/DataModel.msl;provider=Devart.Data.PostgreSql;provider connection string=&quot;User Id=postgres;Password=Banek12;Host=85.92.146.196;Database=bodyview3;Persist Security Info=True;Initial Schema=public&quot;" providerName="System.Data.EntityClient" />
+  </connectionStrings>
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
+  </startup>
+  <userSettings>
+    <ScriptModule.Properties.Settings>
+      <setting name="LastOpenFile" serializeAs="String">
+        <value />
+      </setting>
+    </ScriptModule.Properties.Settings>
+  </userSettings>
+  <entityFramework>
+    <providers>
+      <provider invariantName="Devart.Data.PostgreSql" type="Devart.Data.PostgreSql.Entity.PgSqlEntityProviderServices, Devart.Data.PostgreSql.Entity, Version=7.3.171.6, Culture=neutral, PublicKeyToken=09af7300eec23701" />
+    </providers>
+  </entityFramework>
 </configuration>
