--- a/Mapper/App.config
+++ b/Mapper/App.config
@@ -1,8 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
-    <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-      <section name="ScriptModule.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+    <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+      <section name="ScriptModule.Properties.ApplicationSettings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    </sectionGroup>
+    <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+      <section name="ScriptModule.Properties.UserSettings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
     </sectionGroup>
   </configSections>
   <connectionStrings>
@@ -11,16 +14,36 @@
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
   </startup>
+  <applicationSettings>
+    <ScriptModule.Properties.ApplicationSettings>
+      <setting name="DatabaseName" serializeAs="String">
+        <value>NaitonStoreAccess</value>
+      </setting>
+      <setting name="UserName" serializeAs="String">
+        <value>postgres</value>
+      </setting>
+      <setting name="ConnectionTimeout" serializeAs="String">
+        <value>60</value>
+      </setting>
+      <setting name="Port" serializeAs="String">
+        <value>5432</value>
+      </setting>
+      <setting name="SSLEnabled" serializeAs="String">
+        <value>True</value>
+      </setting>
+      <setting name="Password" serializeAs="String">
+        <value>Banek12</value>
+      </setting>
+      <setting name="ServerName" serializeAs="String">
+        <value>85.92.146.196</value>
+      </setting>
+    </ScriptModule.Properties.ApplicationSettings>
+  </applicationSettings>
   <userSettings>
-    <ScriptModule.Properties.Settings>
+    <ScriptModule.Properties.UserSettings>
       <setting name="LastOpenFile" serializeAs="String">
         <value />
       </setting>
-    </ScriptModule.Properties.Settings>
+    </ScriptModule.Properties.UserSettings>
   </userSettings>
-  <entityFramework>
-    <providers>
-      <provider invariantName="Devart.Data.PostgreSql" type="Devart.Data.PostgreSql.Entity.PgSqlEntityProviderServices, Devart.Data.PostgreSql.Entity, Version=7.3.171.6, Culture=neutral, PublicKeyToken=09af7300eec23701" />
-    </providers>
-  </entityFramework>
 </configuration>
