--- a/Mapper/ScriptModule.csproj
+++ b/Mapper/ScriptModule.csproj
@@ -13,6 +13,21 @@
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{60dc8134-eba5-43b8-bcc9-bb4bc16c2548};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <WarningLevel>4</WarningLevel>
+    <PublishUrl>publish\</PublishUrl>
+    <Install>true</Install>
+    <InstallFrom>Disk</InstallFrom>
+    <UpdateEnabled>false</UpdateEnabled>
+    <UpdateMode>Foreground</UpdateMode>
+    <UpdateInterval>7</UpdateInterval>
+    <UpdateIntervalUnits>Days</UpdateIntervalUnits>
+    <UpdatePeriodically>false</UpdatePeriodically>
+    <UpdateRequired>false</UpdateRequired>
+    <MapFileExtensions>true</MapFileExtensions>
+    <ApplicationRevision>0</ApplicationRevision>
+    <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
+    <IsWebBootstrapper>false</IsWebBootstrapper>
+    <UseApplicationTrust>false</UseApplicationTrust>
+    <BootstrapperEnabled>true</BootstrapperEnabled>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -68,6 +83,9 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="DAL\CDBA.cs" />
+    <Compile Include="DAL\ScriptManager.cs" />
+    <Compile Include="DAL\ScriptRow.cs" />
     <Compile Include="Designers\XsltScriptDesigner\Controls\BlockControl.xaml.cs">
       <DependentUpon>BlockControl.xaml</DependentUpon>
     </Compile>
@@ -83,8 +101,9 @@
     </Compile>
     <Compile Include="Designers\XsltScriptDesigner\Logic\NodePath.cs" />
     <Compile Include="Designers\XsltScriptDesigner\Logic\NodeProperties.cs" />
-    <Compile Include="MainWindow.xaml.cs">
-      <DependentUpon>MainWindow.xaml</DependentUpon>
+    <Compile Include="Settings.cs" />
+    <Compile Include="StandaloneXsltScriptDesigner.xaml.cs">
+      <DependentUpon>StandaloneXsltScriptDesigner.xaml</DependentUpon>
     </Compile>
     <Compile Include="Designers\XsltScriptDesigner\ConnectionSetting.Designer.cs">
       <DependentUpon>ConnectionSetting.settings</DependentUpon>
@@ -138,15 +157,20 @@
     <Compile Include="Scripts\ScriptComposition.cs" />
     <Compile Include="Scripts\UIScript.cs" />
     <Compile Include="Scripts\XsltScript.cs" />
+    <Compile Include="Properties\UserSettings.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTimeSharedInput>True</DesignTimeSharedInput>
+      <DependentUpon>UserSettings.settings</DependentUpon>
+    </Compile>
+    <Compile Include="Utils\Common\GenericEventArgs.cs" />
     <Compile Include="Utils\Compiler.cs" />
     <Compile Include="Utils\InputFormats\CsvReader.cs" />
     <Compile Include="Utils\InputFormats\CsvToXmlConverter.cs" />
-    <Compile Include="Utils\Common\GenericEventArgs.cs" />
     <Compile Include="Utils\Observable\ObservableCollectionDecorator.cs" />
     <Compile Include="Utils\Observable\ObservableConverter.cs" />
     <Compile Include="Utils\Observable\ObservableDecorator.cs" />
     <Compile Include="Utils\Observable\ObservableDecoratorExtensions.cs" />
-    <Compile Include="Utils\Common\TypeExtensions.cs" />
+    <Compile Include="Utils\Extensions\TypeExtensions.cs" />
     <Compile Include="Utils\Common\Reference.cs" />
     <Compile Include="Designers\UIUtils\WPFExtensions.cs" />
     <Compile Include="Utils\InputFormats\XmlSchemaExtensions.cs" />
@@ -185,7 +209,7 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="MainWindow.xaml">
+    <Page Include="StandaloneXsltScriptDesigner.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -259,23 +283,27 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
-    <Compile Include="Properties\Settings.Designer.cs">
+    <Compile Include="Properties\ApplicationSettings.Designer.cs">
       <AutoGen>True</AutoGen>
-      <DependentUpon>Settings.settings</DependentUpon>
+      <DependentUpon>ApplicationSettings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
-    <None Include="Properties\Settings.settings">
+    <None Include="Properties\ApplicationSettings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
-      <LastGenOutput>Settings.Designer.cs</LastGenOutput>
+      <LastGenOutput>ApplicationSettings.Designer.cs</LastGenOutput>
     </None>
     <AppDesigner Include="Properties\" />
     <None Include="Designers\XsltScriptDesigner\ConnectionSetting.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>ConnectionSetting.Designer.cs</LastGenOutput>
+    </None>
+    <None Include="Properties\UserSettings.settings">
+      <Generator>SettingsSingleFileGenerator</Generator>
+      <LastGenOutput>UserSettings.Designer.cs</LastGenOutput>
     </None>
   </ItemGroup>
   <ItemGroup>
@@ -287,12 +315,22 @@
     <Content Include="lib\WPG.dll" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\svn\NaitonProject2014\NaitonWebServices\DatabaseImporterWebService\DatabaseImporterWebService.csproj">
-      <Project>{d159720e-476c-4f9c-a8f7-735b2853f105}</Project>
-      <Name>DatabaseImporterWebService</Name>
-    </ProjectReference>
+    <BootstrapperPackage Include=".NETFramework,Version=v4.5">
+      <Visible>False</Visible>
+      <ProductName>Microsoft .NET Framework 4.5 %28x86 and x64%29</ProductName>
+      <Install>true</Install>
+    </BootstrapperPackage>
+    <BootstrapperPackage Include="Microsoft.Net.Client.3.5">
+      <Visible>False</Visible>
+      <ProductName>.NET Framework 3.5 SP1 Client Profile</ProductName>
+      <Install>false</Install>
+    </BootstrapperPackage>
+    <BootstrapperPackage Include="Microsoft.Net.Framework.3.5.SP1">
+      <Visible>False</Visible>
+      <ProductName>.NET Framework 3.5 SP1</ProductName>
+      <Install>false</Install>
+    </BootstrapperPackage>
   </ItemGroup>
-  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
