--- a/ScriptModuleWebService/ScriptModuleWebService.csproj
+++ b/ScriptModuleWebService/ScriptModuleWebService.csproj
@@ -39,12 +39,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="EntityFramework">
-      <HintPath>..\packages\EntityFramework.6.0.0\lib\net45\EntityFramework.dll</HintPath>
-    </Reference>
-    <Reference Include="EntityFramework.SqlServer">
-      <HintPath>..\packages\EntityFramework.6.0.0\lib\net45\EntityFramework.SqlServer.dll</HintPath>
-    </Reference>
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="Mono.Security">
       <HintPath>..\..\svn\NaitonProject2014\Naiton2014\NaitonLibs\OldVersions\Npgsql_2.0.14.0\Mono.Security.dll</HintPath>
@@ -73,23 +67,30 @@
     <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="ScriptModuleWebService.svc" />
+    <Content Include="ScriptModuleWebService.asmx" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ExecutionManager.cs" />
     <Compile Include="Properties\Settings.Designer.cs">
       <DependentUpon>Settings.settings</DependentUpon>
       <AutoGen>True</AutoGen>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
-    <Compile Include="ScriptModuleWebService.svc.cs">
-      <DependentUpon>ScriptModuleWebService.svc</DependentUpon>
-    </Compile>
-    <Compile Include="IScriptModuleWebService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ScriptModuleWebService.asmx.cs">
+      <DependentUpon>ScriptModuleWebService.asmx</DependentUpon>
+      <SubType>Component</SubType>
+    </Compile>
   </ItemGroup>
-  <ItemGroup />
   <ItemGroup>
+    <ProjectReference Include="..\Mapper\ScriptModule.csproj">
+      <Project>{799b0f01-ce10-4fbe-a310-9cf7fccbc378}</Project>
+      <Name>ScriptModule</Name>
+    </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Properties\PublishProfiles\ScriptsModuleWebService.pubxml" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
