--- a/ScriptModuleWebService/ScriptModuleWebService.csproj
+++ b/ScriptModuleWebService/ScriptModuleWebService.csproj
@@ -71,6 +71,7 @@
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AsyncExecutor.cs" />
     <Compile Include="ExecutionManager.cs" />
     <Compile Include="Properties\Settings.Designer.cs">
       <DependentUpon>Settings.settings</DependentUpon>
